minor styling fix (vertical align: top) for the short description input label on the edit mod page

--- a/mod-picker/app/assets/stylesheets/general/forms.scss
+++ b/mod-picker/app/assets/stylesheets/general/forms.scss
@@ -255,6 +255,10 @@ form {
     margin-top: 5px;
   }
 
+  .text-area-label {
+    vertical-align: top;
+  }
+
   .input-block {
     display: inline-block;
   }
